--- a/profile.html
+++ b/profile.html
@@ -19,7 +19,7 @@
     </nav>
    </header> 
    <aside>
-    <h1>Hello Everyone!</h1>  
+    <h1>Hel Everyone!</h1>  
    </aside>
    <div class="about">
     <h1>About Me</h1>
