--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
     <H2>Vismaya Shankar M</H2>
     <nav class="menu">
       <a href="#"><h1>Home </h1></a>
-       <a href="#"><h1>About </h1></a> 
-       <a href="#"> <h1>Project </h1></a>
-       <a href="#"><h1>Achievements </h1>
-       <a href="#"><h1>Contact</h1> </a> 
+       <a href="#ab"><h1>About </h1></a> 
+       <a href="#ski"> <h1>Project </h1></a>
+       <a href="#ed"><h1>Achievements </h1>
+       <a href="#con"><h1>Contact</h1> </a> 
     </nav>
    </header> 
    <aside>
     <h1>Hello Everyone!</h1>  
    </aside>
    <div class="about">
-    <h1>About Me</h1>
+    <h1 id="ab">About Me</h1>
      <p> Thanks for your interest, here
         is a quick story of me <br><div id="para">"I am Vismaya Shankar M. My home place is Calicut,Kerala.<br>
       I am a graduate in Physics from the University of Calicut. <br> I look 
@@ -30,7 +30,7 @@
    </div>
    <hr><hr><hr>
    <div class="skills">
-    <h3>My Skills</h3>
+    <h3 id="ski">My Skills</h3>
     <ul>
         <li>Singing</li>
         <li>Public Speaking</li>
@@ -41,7 +41,7 @@
    <div class="line">
     <hr ><hr><hr></div>
    <div class="edu">
-    <h1>Education</h1>
+    <h1 id="ed">Education</h1>
     <ul>
         <li><h3>College </h3>
             <ul> <li> August,2016-May 2019  </li>
@@ -52,7 +52,7 @@
              <li>PLUS TWO,COMPUTER SCIENCE </li></ul>
     </ul>
    </div>
-   <div class="contact"><h1>Contact</h1> <br><br><br><br><br>
+   <div class="contact"><h1 id="con">Contact</h1> <br><br><br><br><br>
     <form action="contact">
         <label for="NAME">Name</label> 
         <input type="text" id="name" > <br><br><br>
